<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.hassannaqvi.dr_registration.ui.Providers_Enrollment">

    <data>

        <variable
            name="callback"
            type="com.example.hassannaqvi.dr_registration.ui.Providers_Enrollment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Login progress -->


        <ScrollView
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/fldgrppe01"
                style="@style/Q_Linerlayout_v">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:id="@+id/ll_providers"
                        style="@style/Q_Linerlayout_v">

                        <TextView
                            style="@style/TextViewHead"
                            android:text="Health Provider's Information"
                            android:textAlignment="center" />

                            <TextView
                                style="@style/TextView"
                                android:layout_marginTop="10sp"
                                android:text="@string/PMDC_no" />

                            <com.santalu.widget.MaskEditText
                                android:id="@+id/ed_pmdc_no"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="12345-A"
                                android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                app:met_mask="#####-#" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">


                        <LinearLayout
                            android:id="@+id/ll_providers2"
                            style="@style/Q_Linerlayout_v">

                            <EditText
                                android:id="@+id/ed_name"
                                style="@style/EditText"
                                android:layout_marginTop="20dp"
                                android:hint="Provider's Name" />


                            <EditText
                                android:id="@+id/ed_qualification"
                                style="@style/EditText"
                                android:hint="Highest Qualification" />

                            <EditText
                                android:id="@+id/ed_mobile_no"
                                style="@style/EditText_number"
                                android:hint="Mobile Number"
                                android:inputType="phone"
                                android:maxLength="11" />

                            <EditText
                                android:id="@+id/ed_email"
                                style="@style/EditText"
                                android:hint="Email"
                                android:inputType="textEmailAddress" />

                            <EditText
                                android:id="@+id/ed_address"
                                style="@style/EditText"
                                android:hint="Address" />


                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cvGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">


                        <LinearLayout
                            android:id="@+id/llGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvGender"
                                style="@style/TextView"
                                android:text="@string/tvGender" />


                            <RadioGroup
                                android:id="@+id/rgGender"
                                style="@style/RadioGroup">

                                <RadioButton
                                    android:id="@+id/rbMale"
                                    style="@style/RadioButton"
                                    android:text="@string/rbMale" />

                                <RadioButton
                                    android:id="@+id/rbFemale"
                                    style="@style/RadioButton"
                                    android:text="@string/rbFemale" />

                            </RadioGroup>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cvProvince"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">


                        <LinearLayout style="@style/Q_Linerlayout_v">


                            <LinearLayout
                                android:id="@+id/llProvince"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5sp"
                                android:background="@color/hitnscolor"
                                android:weightSum="2">

                                <TextView
                                    style="@style/TextView"
                                    android:layout_weight="1"
                                    android:text="Province"
                                    android:textStyle="bold" />

                                <Spinner
                                    android:id="@+id/spProvince"
                                    style="@style/EditText_Name"
                                    android:layout_weight="1"
                                    android:background="@color/hitnscolor1"
                                    android:entries="@array/spProvince"
                                    android:textStyle="bold" />

                            </LinearLayout>


                            <LinearLayout
                                android:id="@+id/llDistrict"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5sp"
                                android:background="@color/hitnscolor"
                                android:weightSum="2">

                                <TextView
                                    style="@style/TextView"
                                    android:layout_weight="1"
                                    android:text="District"
                                    android:textStyle="bold" />

                                <Spinner
                                    android:id="@+id/spDistrict"
                                    style="@style/EditText_Name"
                                    android:layout_weight="1"
                                    android:background="@color/hitnscolor1"
                                    android:textStyle="bold" />

                            </LinearLayout>


                            <LinearLayout
                                android:id="@+id/llVC"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5sp"
                                android:background="@color/hitnscolor"
                                android:weightSum="2">

                                <TextView
                                    style="@style/TextView"
                                    android:layout_weight="1"
                                    android:text="Village/City"
                                    android:textStyle="bold" />

                                <Spinner
                                    android:id="@+id/spVC"
                                    style="@style/EditText_Name"
                                    android:layout_weight="1"
                                    android:background="@color/hitnscolor1"
                                    android:hint="select"
                                    android:textStyle="bold" />

                            </LinearLayout>


                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cvConsent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">


                        <LinearLayout
                            android:id="@+id/llConsent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvConsent"
                                style="@style/TextView"
                                android:text="@string/tvConsent" />

                            <RadioGroup
                                android:id="@+id/rgConsent"
                                style="@style/RadioGroup">

                                <RadioButton
                                    android:id="@+id/rbYes"
                                    style="@style/RadioButton"
                                    android:text="@string/rbYes" />

                                <RadioButton
                                    android:id="@+id/rbNo"
                                    style="@style/RadioButton"
                                    android:text="@string/rbNo" />

                            </RadioGroup>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cvWorking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">


                        <LinearLayout
                            android:id="@+id/llWorking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvWorking"
                                style="@style/TextView"
                                android:text="@string/tvWorking" />

                            <EditText
                                android:id="@+id/edWorking"
                                style="@style/EditText_number"
                                android:hint="@string/edWorking"
                                android:maxLength="1" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/syncDevice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimary"
                        android:onClick="syncDevice"
                        android:text="Download Data"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/downloadApp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/red"
                        android:text="DOWNLOAD APP"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/updateApp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorPrimary"
                        android:onClick="updateApp"
                        android:text="Update App"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                    &lt;!&ndash;<Button
                        android:id="@+id/openDB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:onClick="openDB"
                        android:text="Open Database Manager" />&ndash;&gt;

                    <Button
                        android:id="@+id/testGPS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:onClick="testGPS"
                        android:text="Test GPS Coordinates" />
                </LinearLayout>-->

                <android.support.v7.widget.CardView
                    android:id="@+id/cv7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <Button
                        android:id="@+id/btn_pr_submit"
                        style="@style/Button_Next"
                        android:layout_margin="10dp"
                        android:onClick="@{() -> callback.BtnContinue()}"
                        android:text="Submit" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>